--- a/about.html
+++ b/about.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8" />
 		<title>__Easter Egg</title>
+		<link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet" type="text/css">
+    		<link rel="alternate" type="application/atom+xml" title="Feed for blog posts" href="/feed.xml">
+    		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
-	<body style="margin: 0 auto; height: 100%;">
+	<body style="margin: 0 auto; height: 100%; font-family: "noto sans kr">
 	<header style="top: 0;">
 		<h1 style="text-align: center">자기 소개서</h1>
 	</header>
