--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 			<br />
 		</div>
 		<div style="text-align: center">
-			<img src="legogh.jpg" width="200px" height="200px" style="border-radius: 100%;" />
+			<img src="assets/images/legogh.jpg" width="200px" height="200px" style="border-radius: 100%;" />
 		</div>
 		<br />
 		<div style="width: 300px; margin: 0 auto; font-size: 20px;">
@@ -47,7 +47,7 @@
 			<ol>
 				<li>멋쟁이사자처럼: 대학생을 대상으로 하는 코딩 교육 동아리인 멋쟁이사자처럼의 3기에 학생으로 참여했습니다. 그리고 올해 멋쟁이사자처럼 4기 충남대 학생들을 위한 운영진으로 활동하고 있습니다.</li>
 				<br/>
-				<li>코딩카페: 대전/유성지역을 중심으로 활동하는 IT 커뮤니티인 코딩카페를 기획하고 운영하고 있습니다. <a href="https://www.facebook.com/groups/codin9cafe">페이스북 그룹 페이지</a></li>
+				<li>코딩카페: 대전/유성지역을 중심으로 활동하는 IT 커뮤니티인 코딩카페를 기획하고 운영하고 있습니다. <br/> <a href="https://www.facebook.com/groups/codin9cafe">페이스북 그룹 페이지</a></li>
 			</ol>
 		</div>
 	</div>
