--- a/about.html
+++ b/about.html
@@ -8,6 +8,11 @@
     		<link rel="alternate" type="application/atom+xml" title="Feed for blog posts" href="/feed.xml">
     		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
+	<style>
+		li {
+			text-decoration: none;
+		}
+	</style>
 	<body style="margin: 0 auto; height: 100%; font-family: "noto sans kr">
 	<header style="top: 0;">
 		<h1 style="text-align: center">자기 소개서</h1>
