--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
 	</head>
 	<style>
 		li {
-			text-decoration: none;
+			margin-top: 5px;
+			margin-bottom: 5px;
 		}
 	</style>
 	<body style="margin: 0 auto; height: 100%; font-family: "noto sans kr">
