--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 			margin-bottom: 5px;
 		}
 	</style>
-	<body style="margin: 0 auto; height: 100%; font-family: 'Noto Sans Korean'>
+	<body style="margin: 0 auto; height: 100%; font-family: 'Noto Sans Korean'">
 	<header style="top: 0;">
 		<h1 style="text-align: center">자기 소개서</h1>
 	</header>
