--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
 			</ol>
 		</div>
 	</div>
-	<footer style="bottom: 0;">
-		<h1 style="text-align: center;">반가워요!</h1>
+	<footer style="bottom: 0; margin-top: 30px;">
+		<h4 style="text-align: center;">Be a good 'Developer'</h4>
 	</footer>
 	</body>
 </html>
